--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.4",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "prisma": "^6.12.0"
